[metadata]
name = pymerlin
url = http://cloudwall.tech
version = file: VERSION.txt
description = Python client for the Merlin DeFi API
long_description = file: README.md
author = Cloudwall DevSecOps team
author_email = devsecops@cloudwall.tech

[options]
package_dir= =src/python
python_requires = >=3.8
packages = find:
include_package_data = True
install_requires =
    fire==0.4.0
    requests==2.31.0
    typing-extensions==4.8.0

[options.packages.find]
where=src/python

[options.package_data]
* = 
    *.cfg

[flake8]
max-line-length = 120
extend-ignore = RST303,RST304,E731
